[gd_scene load_steps=47 format=2]

[ext_resource path="res://upgrade.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Tanks.png" type="Texture" id=2]
[ext_resource path="res://Bubble Bobble.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Tilemaps/terrainTiles_default.png" type="Texture" id=4]
[ext_resource path="res://barHorizontal_green_mid 200.png" type="Texture" id=5]

[sub_resource type="TileSet" id=1]
0/name = "terrainTiles_default.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 32, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "terrainTiles_default.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 32, 160, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.203922, 0.00784314, 0.00784314, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.203922, 0.00784314, 0.00784314, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.203922, 0.00784314, 0.00784314, 1 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.121569, 0, 0.0117647, 0.8 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.219608, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.321569, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.168627, 0, 0, 1 )

[sub_resource type="DynamicFont" id=10]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0.027451, 0.741176, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.694118, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0, 1, 0.0196078, 1 )

[sub_resource type="DynamicFont" id=14]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.121569, 0, 0.0117647, 0.8 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.203922, 0.0196078, 0.0196078, 1 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.203922, 0.0196078, 0.0196078, 1 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.203922, 0.0196078, 0.0196078, 1 )

[sub_resource type="DynamicFont" id=19]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.203922, 0.0196078, 0.0196078, 1 )

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.203922, 0.0196078, 0.0196078, 1 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.203922, 0.0196078, 0.0196078, 1 )

[sub_resource type="DynamicFont" id=23]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=24]
bg_color = Color( 0.203922, 0.0196078, 0.0196078, 1 )

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0.203922, 0.0196078, 0.0196078, 1 )

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0.203922, 0.0196078, 0.0196078, 1 )

[sub_resource type="DynamicFont" id=27]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=28]
bg_color = Color( 0.529412, 0, 0, 1 )

[sub_resource type="DynamicFont" id=29]
size = 22
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=30]
bg_color = Color( 0.360784, 0.0745098, 0, 1 )

[sub_resource type="StyleBoxFlat" id=31]
bg_color = Color( 0.0235294, 0.666667, 0.0117647, 1 )

[sub_resource type="StyleBoxFlat" id=32]
bg_color = Color( 0.0235294, 0.666667, 0.0117647, 1 )

[sub_resource type="DynamicFont" id=33]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=34]
bg_color = Color( 0.360784, 0.0745098, 0, 1 )

[sub_resource type="StyleBoxFlat" id=35]
bg_color = Color( 0.0235294, 0.666667, 0.0117647, 1 )

[sub_resource type="StyleBoxFlat" id=36]
bg_color = Color( 0.0235294, 0.666667, 0.0117647, 1 )

[sub_resource type="DynamicFont" id=37]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=38]
bg_color = Color( 0.352941, 0, 0, 1 )

[sub_resource type="DynamicFont" id=39]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=40]
bg_color = Color( 0, 0, 0, 0.6 )

[sub_resource type="DynamicFont" id=41]
size = 60
font_data = ExtResource( 3 )

[node name="CustomizeControl" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 30, 0, 0, 31, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 65556, 0, 0, 65557, 0, 0, 65558, 0, 0, 65559, 0, 0, 65560, 0, 0, 65561, 0, 0, 65562, 0, 0, 65563, 0, 0, 65564, 0, 0, 65565, 0, 0, 65566, 0, 0, 65567, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 131092, 0, 0, 131093, 0, 0, 131094, 0, 0, 131095, 0, 0, 131096, 0, 0, 131097, 0, 0, 131098, 0, 0, 131099, 0, 0, 131100, 0, 0, 131101, 0, 0, 131102, 0, 0, 131103, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 196628, 0, 0, 196629, 0, 0, 196630, 0, 0, 196631, 0, 0, 196632, 0, 0, 196633, 0, 0, 196634, 0, 0, 196635, 0, 0, 196636, 0, 0, 196637, 0, 0, 196638, 0, 0, 196639, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 262164, 0, 0, 262165, 0, 0, 262166, 0, 0, 262167, 0, 0, 262168, 0, 0, 262169, 0, 0, 262170, 0, 0, 262171, 0, 0, 262172, 0, 0, 262173, 0, 0, 262174, 0, 0, 262175, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 327700, 0, 0, 327701, 0, 0, 327702, 0, 0, 327703, 0, 0, 327704, 0, 0, 327705, 0, 0, 327706, 0, 0, 327707, 0, 0, 327708, 0, 0, 327709, 0, 0, 327710, 0, 0, 327711, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0, 393236, 0, 0, 393237, 0, 0, 393238, 0, 0, 393239, 0, 0, 393240, 0, 0, 393241, 0, 0, 393242, 0, 0, 393243, 0, 0, 393244, 0, 0, 393245, 0, 0, 393246, 0, 0, 393247, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 458772, 0, 0, 458773, 0, 0, 458774, 0, 0, 458775, 0, 0, 458776, 0, 0, 458777, 0, 0, 458778, 0, 0, 458779, 0, 0, 458780, 0, 0, 458781, 0, 0, 458782, 0, 0, 458783, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 524311, 0, 0, 524312, 0, 0, 524313, 0, 0, 524314, 0, 0, 524315, 0, 0, 524316, 0, 0, 524317, 0, 0, 524318, 0, 0, 524319, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 589847, 0, 0, 589848, 0, 0, 589849, 0, 0, 589850, 0, 0, 589851, 0, 0, 589852, 0, 0, 589853, 0, 0, 589854, 0, 0, 589855, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 655380, 0, 0, 655381, 0, 0, 655382, 0, 0, 655383, 0, 0, 655384, 0, 0, 655385, 0, 0, 655386, 0, 0, 655387, 0, 0, 655388, 0, 0, 655389, 0, 0, 655390, 0, 0, 655391, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 720916, 0, 0, 720917, 0, 0, 720918, 0, 0, 720919, 0, 0, 720920, 0, 0, 720921, 0, 0, 720922, 0, 0, 720923, 0, 0, 720924, 0, 0, 720925, 0, 0, 720926, 0, 0, 720927, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0, 786453, 0, 0, 786454, 0, 0, 786455, 0, 0, 786456, 0, 0, 786457, 0, 0, 786458, 0, 0, 786459, 0, 0, 786460, 0, 0, 786461, 0, 0, 786462, 0, 0, 786463, 0, 0, 851968, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851984, 0, 0, 851985, 0, 0, 851986, 0, 0, 851987, 0, 0, 851988, 0, 0, 851989, 0, 0, 851990, 0, 0, 851991, 0, 0, 851992, 0, 0, 851993, 0, 0, 851994, 0, 0, 851995, 0, 0, 851996, 0, 0, 851997, 0, 0, 851998, 0, 0, 851999, 0, 0, 917504, 0, 0, 917505, 0, 0, 917506, 0, 0, 917507, 0, 0, 917508, 0, 0, 917509, 0, 0, 917510, 0, 0, 917511, 0, 0, 917512, 0, 0, 917513, 0, 0, 917514, 0, 0, 917515, 0, 0, 917516, 0, 0, 917517, 0, 0, 917518, 0, 0, 917519, 0, 0, 917520, 0, 0, 917521, 0, 0, 917522, 0, 0, 917523, 0, 0, 917524, 0, 0, 917525, 0, 0, 917526, 0, 0, 917527, 0, 0, 917528, 0, 0, 917529, 0, 0, 917530, 0, 0, 917531, 0, 0, 917532, 0, 0, 917533, 0, 0, 917534, 0, 0, 917535, 0, 0, 983040, 0, 0, 983041, 0, 0, 983042, 0, 0, 983043, 0, 0, 983044, 0, 0, 983045, 0, 0, 983046, 0, 0, 983047, 0, 0, 983048, 0, 0, 983049, 0, 0, 983050, 0, 0, 983051, 0, 0, 983052, 0, 0, 983053, 0, 0, 983054, 0, 0, 983055, 0, 0, 983056, 0, 0, 983057, 0, 0, 983058, 0, 0, 983059, 0, 0, 983060, 0, 0, 983061, 0, 0, 983062, 0, 0, 983063, 0, 0, 983064, 0, 0, 983065, 0, 0, 983066, 0, 0, 983067, 0, 0, 983068, 0, 0, 983069, 0, 0, 983070, 0, 0, 983071, 0, 0, 1048576, 0, 0, 1048577, 0, 0, 1048578, 0, 0, 1048579, 0, 0, 1048580, 0, 0, 1048581, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 0, 0, 1048587, 0, 0, 1048588, 0, 0, 1048589, 0, 0, 1048590, 0, 0, 1048591, 0, 0, 1048592, 0, 0, 1048593, 0, 0, 1048594, 0, 0, 1048595, 0, 0, 1048596, 0, 0, 1048597, 0, 0, 1048598, 0, 0, 1048599, 0, 0, 1048600, 0, 0, 1048601, 0, 0, 1048602, 0, 0, 1048603, 0, 0, 1048604, 0, 0, 1048605, 0, 0, 1048606, 0, 0, 1048607, 0, 0, 1114112, 0, 0, 1114113, 0, 0, 1114114, 0, 0, 1114115, 0, 0, 1114116, 0, 0, 1114117, 0, 0, 1114118, 0, 0, 1114119, 0, 0, 1114120, 0, 0, 1114121, 0, 0, 1114122, 0, 0, 1114123, 0, 0, 1114124, 0, 0, 1114125, 0, 0, 1114126, 0, 0, 1114127, 0, 0, 1114128, 0, 0, 1114129, 0, 0, 1114130, 0, 0, 1114131, 0, 0, 1114132, 0, 0, 1114133, 0, 0, 1114134, 0, 0, 1114135, 0, 0, 1114136, 0, 0, 1114137, 0, 0, 1114138, 0, 0, 1114139, 0, 0, 1114140, 0, 0, 1114141, 0, 0, 1114142, 0, 0, 1114143, 0, 0, 1179648, 0, 0, 1179649, 0, 0, 1179650, 0, 0, 1179651, 0, 0, 1179652, 0, 0, 1179653, 0, 0, 1179654, 0, 0, 1179655, 0, 0, 1179656, 0, 0, 1179657, 0, 0, 1179658, 0, 0, 1179659, 0, 0, 1179660, 0, 0, 1179661, 0, 0, 1179662, 0, 0, 1179663, 0, 0, 1179664, 0, 0, 1179665, 0, 0, 1179666, 0, 0, 1179667, 0, 0, 1179668, 0, 0, 1179669, 0, 0, 1179670, 0, 0, 1179671, 0, 0, 1179672, 0, 0, 1179673, 0, 0, 1179674, 0, 0, 1179675, 0, 0, 1179676, 0, 0, 1179677, 0, 0, 1179678, 0, 0, 1179679, 0, 0 )

[node name="quit" type="Button" parent="."]
margin_right = 181.0
margin_bottom = 68.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.176471, 0.662745, 0, 1 )
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = 471.0
margin_right = 1024.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mySprite" type="Sprite" parent="Panel"]
position = Vector2( -239.74, 266 )
scale = Vector2( 1.31734, 1.02273 )
texture = ExtResource( 2 )
region_enabled = true

[node name="protank" type="Button" parent="Panel"]
margin_left = 304.0
margin_top = 283.822
margin_right = 544.0
margin_bottom = 414.822
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.223529, 0.6, 0.133333, 1 )
text = "BUY 500/="
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ultimatetank" type="Button" parent="Panel"]
margin_left = 309.0
margin_top = 461.0
margin_right = 550.0
margin_bottom = 584.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.223529, 0.6, 0.133333, 1 )
text = "BUY 2000/="
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tank1" type="Button" parent="Panel"]
margin_left = 298.0
margin_top = 112.0
margin_right = 538.0
margin_bottom = 232.0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.0235294, 0.666667, 0.0117647, 1 )
text = "EQUIP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Panel"]
position = Vector2( 214.008, 334.285 )
scale = Vector2( 0.590165, 0.494994 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 664, 542.604, 272, 292 )

[node name="Sprite2" type="Sprite" parent="Panel"]
position = Vector2( 202.644, 512.837 )
scale = Vector2( 0.506888, 0.375967 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 34.3461, 879.913, 353.965, 447.24 )

[node name="Sprite3" type="Sprite" parent="Panel"]
position = Vector2( 212.307, 167 )
scale = Vector2( 0.653724, 0.483197 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 677, 110, 246, 296 )

[node name="Speed1" type="TextureProgress" parent="Panel"]
margin_left = 19.2025
margin_top = 101.0
margin_right = 219.203
margin_bottom = 127.0
rect_scale = Vector2( 0.5, 1 )
value = 50.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 5 )
tint_under = Color( 0.0156863, 0.0156863, 0.0156863, 1 )
tint_progress = Color( 0, 0.321569, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Damage1" type="TextureProgress" parent="Panel"]
margin_left = 20.2025
margin_top = 141.0
margin_right = 220.203
margin_bottom = 167.0
rect_scale = Vector2( 0.5, 1 )
value = 20.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 5 )
tint_under = Color( 0.0156863, 0.0156863, 0.0156863, 1 )
tint_progress = Color( 1, 0, 0, 1 )

[node name="Health1" type="TextureProgress" parent="Panel"]
margin_left = 19.2025
margin_top = 181.663
margin_right = 219.203
margin_bottom = 207.663
rect_scale = Vector2( 0.5, 1 )
value = 20.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 5 )
tint_under = Color( 0.0156863, 0.0156863, 0.0156863, 1 )

[node name="SpeedPro" type="TextureProgress" parent="Panel"]
margin_left = 17.2025
margin_top = 266.0
margin_right = 217.203
margin_bottom = 292.0
rect_scale = Vector2( 0.5, 1 )
value = 80.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 5 )
tint_under = Color( 0, 0, 0, 1 )
tint_progress = Color( 0, 0.321569, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DamagePro" type="TextureProgress" parent="Panel"]
margin_left = 16.2025
margin_top = 308.555
margin_right = 216.203
margin_bottom = 334.555
rect_scale = Vector2( 0.5, 1 )
value = 40.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 5 )
tint_under = Color( 0, 0, 0, 1 )
tint_progress = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelathPro" type="TextureProgress" parent="Panel"]
margin_left = 17.2025
margin_top = 349.545
margin_right = 217.203
margin_bottom = 375.545
rect_scale = Vector2( 0.5, 1 )
value = 40.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 5 )
tint_under = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedUlt" type="TextureProgress" parent="Panel"]
margin_left = 14.0
margin_top = 461.0
margin_right = 214.0
margin_bottom = 487.0
rect_scale = Vector2( 0.5, 1 )
value = 50.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 5 )
tint_under = Color( 0, 0, 0, 1 )
tint_progress = Color( 0, 0.321569, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DamageUlt" type="TextureProgress" parent="Panel"]
margin_left = 16.0
margin_top = 511.0
margin_right = 216.0
margin_bottom = 537.0
rect_scale = Vector2( 0.5, 1 )
value = 80.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 5 )
tint_under = Color( 0, 0, 0, 1 )
tint_progress = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthUlt" type="TextureProgress" parent="Panel"]
margin_left = 17.2025
margin_top = 558.0
margin_right = 217.203
margin_bottom = 584.0
rect_scale = Vector2( 0.5, 1 )
value = 80.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 5 )
tint_under = Color( 0, 0, 0, 1 )

[node name="speedkey" type="Label" parent="Panel"]
margin_left = -416.912
margin_top = 500.0
margin_right = -376.912
margin_bottom = 514.0
custom_styles/normal = SubResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="damagekey" type="Label" parent="Panel"]
margin_left = -416.912
margin_top = 533.0
margin_right = -376.912
margin_bottom = 547.0
custom_styles/normal = SubResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="healthkey" type="Label" parent="Panel"]
margin_left = -416.912
margin_top = 569.0
margin_right = -376.912
margin_bottom = 583.0
custom_styles/normal = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="speedkey2" type="Label" parent="Panel"]
margin_left = -356.261
margin_top = 493.0
margin_right = -310.261
margin_bottom = 516.0
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 0, 0.243137, 0.972549, 1 )
text = "SPEED"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="damagekey2" type="Label" parent="Panel"]
margin_left = -359.944
margin_top = 527.277
margin_right = -297.944
margin_bottom = 550.277
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "DAMAGE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="healthkey2" type="Label" parent="Panel"]
margin_left = -360.954
margin_top = 562.861
margin_right = -300.954
margin_bottom = 585.861
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 0.0431373, 0.411765, 0, 1 )
text = "HEALTH"

[node name="Panel2" type="Panel" parent="."]
visible = false
margin_left = 542.0
margin_right = 1024.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mySprite2" type="Sprite" parent="Panel2"]
position = Vector2( -281.44, 301 )
scale = Vector2( 1.46654, 1.20301 )
texture = ExtResource( 2 )
region_enabled = true

[node name="barrel1" type="Button" parent="Panel2"]
margin_left = 241.0
margin_top = 101.0
margin_right = 468.0
margin_bottom = 232.0
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/normal = SubResource( 18 )
custom_fonts/font = SubResource( 19 )
custom_colors/font_color = Color( 0.0235294, 0.666667, 0.0117647, 1 )
text = "EQUIP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="probarrel" type="Button" parent="Panel2"]
margin_left = 241.0
margin_top = 266.0
margin_right = 468.0
margin_bottom = 405.0
custom_styles/hover = SubResource( 20 )
custom_styles/pressed = SubResource( 21 )
custom_styles/normal = SubResource( 22 )
custom_fonts/font = SubResource( 23 )
custom_colors/font_color = Color( 0.0235294, 0.666667, 0.0117647, 1 )
text = "BUY  300/="
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ultbarrel" type="Button" parent="Panel2"]
margin_left = 241.0
margin_top = 428.0
margin_right = 464.0
margin_bottom = 569.0
custom_styles/hover = SubResource( 24 )
custom_styles/pressed = SubResource( 25 )
custom_styles/normal = SubResource( 26 )
custom_fonts/font = SubResource( 27 )
custom_colors/font_color = Color( 0.0235294, 0.666667, 0.0117647, 1 )
text = "BUY 1000/="
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fire_rate" type="TextureProgress" parent="Panel2"]
margin_top = 214.775
margin_right = 200.0
margin_bottom = 240.775
value = 40.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 5 )
tint_under = Color( 0, 0, 0, 1 )
tint_progress = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fire_rate_pro" type="TextureProgress" parent="Panel2"]
margin_top = 390.673
margin_right = 200.0
margin_bottom = 416.673
value = 60.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 5 )
tint_under = Color( 0, 0, 0, 1 )
tint_progress = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fire_rate_ult" type="TextureProgress" parent="Panel2"]
margin_top = 558.0
margin_right = 200.0
margin_bottom = 584.0
value = 90.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 5 )
tint_under = Color( 0, 0, 0, 1 )
tint_progress = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Panel2"]
position = Vector2( 131.417, 147.077 )
rotation = 1.5708
scale = Vector2( 0.841015, 0.743624 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 1040.05, 64.534, 125, 270 )

[node name="Sprite2" type="Sprite" parent="Panel2"]
position = Vector2( 123.268, 316.618 )
rotation = 1.5708
scale = Vector2( 0.718829, 0.792246 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 1030.97, 515.725, 165.283, 274.872 )

[node name="Sprite3" type="Sprite" parent="Panel2"]
position = Vector2( 123.268, 491.775 )
rotation = 1.5708
scale = Vector2( 0.911108, 0.663842 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 1094, 884.183, 159.25, 327.75 )

[node name="fire_rate_key" type="Label" parent="Panel2"]
margin_left = -487.912
margin_top = 547.0
margin_right = -447.912
margin_bottom = 561.0
custom_styles/normal = SubResource( 28 )

[node name="fire_rate_key2" type="Label" parent="Panel2"]
margin_left = -427.261
margin_top = 541.0
margin_right = -342.261
margin_bottom = 564.0
custom_fonts/font = SubResource( 29 )
custom_colors/font_color = Color( 0.662745, 0, 0, 1 )
text = "FIRE   RATE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="barrelpanel" type="Button" parent="."]
margin_left = 764.0
margin_right = 985.0
margin_bottom = 68.0
custom_styles/hover = SubResource( 30 )
custom_styles/pressed = SubResource( 31 )
custom_styles/normal = SubResource( 32 )
custom_fonts/font = SubResource( 33 )
custom_colors/font_color = Color( 0.333333, 0, 0, 1 )
text = "TURRETS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tankpanel" type="Button" parent="."]
margin_left = 552.093
margin_right = 748.093
margin_bottom = 68.0
custom_styles/hover = SubResource( 34 )
custom_styles/pressed = SubResource( 35 )
custom_styles/normal = SubResource( 36 )
custom_fonts/font = SubResource( 37 )
custom_colors/font_color = Color( 0.34902, 0, 0, 1 )
text = "TANKS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 187.0
margin_right = 470.0
margin_bottom = 52.0
custom_styles/normal = SubResource( 38 )
custom_fonts/font = SubResource( 39 )
custom_colors/font_color = Color( 0, 0.596078, 0.137255, 1 )
text = "Cash Points: 0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="notePanel" type="Panel" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 40 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="note" type="Label" parent="notePanel"]
margin_left = 271.349
margin_top = 261.957
margin_right = 783.349
margin_bottom = 329.957
custom_fonts/font = SubResource( 41 )
custom_colors/font_color = Color( 0.490196, 0.929412, 0.466667, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "NOT ENOUGH POINTS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Panel/protank" to="." method="_on_protank_pressed"]
[connection signal="pressed" from="Panel/ultimatetank" to="." method="_on_ultimatetank_pressed"]
[connection signal="pressed" from="Panel/tank1" to="." method="_on_tank1_pressed"]
[connection signal="pressed" from="Panel2/barrel1" to="." method="_on_barrel1_pressed"]
[connection signal="pressed" from="Panel2/probarrel" to="." method="_on_probarrel_pressed"]
[connection signal="pressed" from="Panel2/ultbarrel" to="." method="_on_ultbarrel_pressed"]
[connection signal="pressed" from="barrelpanel" to="." method="_on_barrelpanel_pressed"]
[connection signal="pressed" from="tankpanel" to="." method="_on_tankpanel_pressed"]
